--- a/templates/about.html
+++ b/templates/about.html
@@ -38,4 +38,64 @@
             long nose, the longest of any of the Dwarves in Thorin's company.</p>
     </div><!--end col-md-7-->
 </div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Óin</h3>
+        <p>Óin was the older brother of Glóin, cousin of Dwalin and Balin, and uncle of Gimli. Óin's uncle was Fundin,
+            the father of Balin and Dwalin.</p>
+    </div><!--end col-md-7-->
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/e/e8/Oin.jpg" alt="">
+    </div><!--end col-md-5-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg" alt="">
+    </div><!--end col-md-5-->
+    <div class="col-md-7">
+        <h3>Glóin</h3>
+        <p>Glóin was born in TA 2783, after the dragon Smaug desolated Erebor. He was the younger child of Gróin and
+            younger brother of Óin.
+            In TA 2799, Glóin was known to have fought in the Battle of Azanulbizar, the last battle of the War of the
+            Dwarves and Orcs, though it is unknown how significant his contribution was, being 16 years old.</p>
+    </div><!--end col-md-7-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Balin</h3>
+        <p>Balin was likely born in the Lonely Mountain before the coming of the dragon Smaug. He had a younger brother
+            named Dwalin, and was amongst those driven from their homes when Smaug attacked the Lonely Mountain.
+            Afterwards, he may have lived in Dunland as a refugee, before fighting in the War of the Dwarves and Orcs
+            which culminated in the Battle of Azanulbizar. Many years later, in approximately TA 2841, he accompanied
+            Thráin II, the father of Thorin, when he attempted to go back to the Lonely Mountain himself, but Thráin was
+            captured and lost.</p>
+    </div><!--end col-md-7-->
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/5/52/Balin.jpg" alt="">
+    </div><!--end col-md-5-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg" alt="">
+    </div><!--end col-md-5-->
+    <div class="col-md-7">
+        <h3>Dwalin</h3>
+        <p>Born in TA 2772, two years after the dragon Smaug had desolated Erebor, Dwalin was the son of Fundin and
+            younger brother of Balin. After fighting in the Battle of Azanulbizar at the age of 27, Dwalin accompanied
+            Thráin II and Thorin Oakenshield to settle peacefully in the northern Ered Luin.</p>
+    </div><!--end col-md-7-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg" alt="">
+    </div><!--end col-md-5-->
+    <div class="col-md-7">
+        <h3>Ori</h3>
+        <p>Ori lived in Thorin's Halls in the northern Blue Mountains for many years, alongside his cousins: Dori and
+            Nori. In the year TA 2941, Ori became a member of Thorin's Company and travelled with Thorin, Gandalf, Bilbo
+            Baggins, and the other Dwarves on the quest for the Lonely Mountain, culminating in the death of Smaug.
+            Finally, he and the other Dwarves of Thorin's Company fought in the Battle of Five Armies in TA 2942, which
+            he survived.</p>
+    </div><!--end col-md-7-->
+</div><!--end row featurette-->
 {% endblock %}
