--- a/templates/about.html
+++ b/templates/about.html
@@ -86,9 +86,6 @@
     </div><!--end col-md-7-->
 </div><!--end row featurette-->
 <div class="row featurette">
-    <div class="col-md-5">
-        <img src="https://static.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg" alt="">
-    </div><!--end col-md-5-->
     <div class="col-md-7">
         <h3>Ori</h3>
         <p>Ori lived in Thorin's Halls in the northern Blue Mountains for many years, alongside his cousins: Dori and
@@ -97,5 +94,81 @@
             Finally, he and the other Dwarves of Thorin's Company fought in the Battle of Five Armies in TA 2942, which
             he survived.</p>
     </div><!--end col-md-7-->
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg" alt="">
+    </div><!--end col-md-5-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/2/27/Mark_Hadlow_as_Dori.jpg" alt="">
+    </div><!--end col-md-5-->
+    <div class="col-md-7">
+        <h3>Dori</h3>
+        <p>Before the Quest of Erebor, Dori lived in Thorin's hall in the northern Blue Mountains with Nori and Ori. In
+            TA 2941, the three became part of Thorin and Company, befriending Bilbo Baggins and traveling with him in
+            search of Smaug's treasure at the Lonely Mountain.</p>
+    </div><!--end col-md-7-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Nori</h3>
+        <p>Nori, as was his brother Dori, was a capable flutist, and both seem to have carried their flutes with them.
+            Both shared Bilbo's liking for regular meals. Before the Quest for the Lonely Mountain, Nori lived in
+            Thorin's Halls in the northern Blue Mountains with his two brothers.</p>
+    </div><!--end col-md-7-->
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/5/50/Untitled-31.png" alt="">
+    </div><!--end col-md-5-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/7/73/Bifur_2.jpg" alt="">
+    </div><!--end col-md-5-->
+    <div class="col-md-7">
+        <h3>Bifur</h3>
+        <p>Whilst he was a descendant of the Dwarves of Khazad-dûm, Bifur was not related to the royal House of Durin.
+            Most of his familial relations are unclear, and what is known of his parentage is very little. He and his
+            family were driven out of their home in the Lonely Mountain by the dragon Smaug, and were forced to live in
+            exile, where the Dwarf warrior worked as a toy maker. Following Thorin II Oakenshield to a new life at his
+            halls in the Blue Mountains, he continued his life as a toy maker.</p>
+    </div><!--end col-md-7-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Bofur</h3>
+        <p>Bofur was not related to the royal House of Durin but was descended from the Dwarves of Khazad-dûm.</p>
+    </div><!--end col-md-7-->
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/5/56/Bofur_Nesbitt.jpg" alt="">
+    </div><!--end col-md-5-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/e/ed/Bombur.jpg" alt="">
+    </div><!--end col-md-5-->
+    <div class="col-md-7">
+        <h3>Bombur</h3>
+        <p>Bombur's parentage is unknown. He was the brother of Bofur and cousin of Bifur. Bombur was not of Durin's
+            line, although he was descended from the Dwarves of Khazad-dûm. His birth date is unknown, though it fell
+            somewhere between TA 2763 and TA 2859; the brothers Fíli and Kíli were the youngest of the thirteen "by some
+            fifty years," and, after Thorin was captured, Balin was "the eldest left." Fíli was born in TA 2859, and
+            Balin was born in TA 2763. Bombur was thus roughly 150 years old during the quest. Prior to the journey,
+            Bombur likely resided in the Blue Mountains alongside Thorin, after the loss of Thráin II.</p>
+    </div><!--end col-md-7-->
+</div><!--end row featurette-->
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Gandalf</h3>
+        <p>Originally called Olórin, he was accounted as the wisest of the Maiar. He was created by Ilúvatar before the
+            Music of the Ainur[1], and was at the beginning of Time amongst the Ainur who entered into Eä.[2] In his
+            "youth" he became one of the Maiar who served Manwë, Varda, Irmo, and Nienna. He was associated with light
+            and fire, much like Varda[3], yet his ways often took him to Nienna, from whom he learned pity and patience.
+            He loved the Elves, but walked unseen among them, or wore the guise of an Elf, and sent them fair visions in
+            their hearts that made them wiser. Throughout his life he followed the example of Nienna, talking pity on
+            the sorrows of the Children of Ilúvatar and drawing those who listened to him out of despair.</p>
+    </div><!--end col-md-7-->
+    <div class="col-md-5">
+        <img src="https://static.wikia.nocookie.net/lotr/images/e/e7/Gandalf_the_Grey.jpg" alt="">
+    </div><!--end col-md-5-->
 </div><!--end row featurette-->
 {% endblock %}
